# Nimbus-Reverb

./: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverbEngine.cpp  ReverbEngine.h  ReverbParameters.h
